--- a/content/stylesheets/layout.css
+++ b/content/stylesheets/layout.css
@@ -4,7 +4,7 @@ html, body {
     min-width: 100%;
     width: 100%;
     max-width: 100%;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 16px;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
@@ -157,6 +157,10 @@ a.sub-menu-link.expand::after {
     .container, .nav {
         width: 750px;
     }
+
+    a.brand, .branding {
+        width: 300px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -175,10 +179,6 @@ a.sub-menu-link.expand::after {
         position: initial; 
     }
 
-    .nav {
-        width: 200px;
-    }
-
     ul.menu {
         display: block;
         margin: 0;
@@ -188,10 +188,18 @@ a.sub-menu-link.expand::after {
     #btnMenuToggle {
         display: none;
     }
+
+    .nav, a.brand, .branding {
+        width: 250px;
+    }
 }
 
 @media (min-width: 1200px) {
     .container {
         width: 1170px;
+    }
+
+    .nav a.brand, .branding {
+        width: 300px;
     }
 }
