--- a/content/stylesheets/layout.css
+++ b/content/stylesheets/layout.css
@@ -163,6 +163,13 @@ a.sub-menu-link.expand::after {
     }
 }
 
+#bgCanvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 @media (min-width: 992px) {
     .container {
         width: 970px;
@@ -183,6 +190,7 @@ a.sub-menu-link.expand::after {
         display: block;
         margin: 0;
         padding-top: 80px;
+        background: none;
     }
 
     #btnMenuToggle {
