--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,10 +1,13 @@
+html, body {
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
     min-width: 100%;
     width: 100%;
-    max-width: 100%;
-    min-height: 100%;
+    max-width: 100%;    
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     -webkit-text-size-adjust: 100%;
@@ -12,7 +15,10 @@ body {
     -moz-text-size-adjust: 100%;
     color: #ffffff;
     text-decoration: none;
-    text-shadow: none;
+    text-shadow: none;    
+}
+
+.Layout {
     background: linear-gradient(165deg, #2178D1 0%, #7FB4C7 100%);
 }
 
@@ -206,6 +212,10 @@ a.sub-menu-link::after {
     font-size: 12px;
 }
 
+#index .content {
+    padding: 0;
+}
+
 @media (min-width: 768px) {
     .mainContainer, .header-nav {
         padding: 0 15px;
@@ -333,23 +343,7 @@ a.sub-menu-link::after {
     position: absolute;
     top: 0;
 }
-
-#parallax-lvl-0 {
-    z-index: -1
-}
-
-#parallax-lvl-1 {
-    z-index: -1
-}
-
-#parallax-lvl-2 {
-    z-index: -1
-}
-
-#parallax-lvl-3 {
-    z-index: -1;
-}
-    
+  
 .cloud {    
     position: absolute;
     opacity: 0.7;
